# reim-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  oracle.c
eval/: d4c_oracle.cpp  fit_fusion.py  pitch_rpa.py  roundtrip_quality.py
examples/: bench_segment.rs  bench_sustain.rs  formant_shift.rs
reference/: d4c_reference.cpp  reim_reference.c
src/: lib.rs  main.rs  segment.rs
tests/: segment.rs  snapshot.rs
tests/fixtures/: roundtrip_24k.f32
