[package]
name = "reim"
version = "0.1.0"
edition = "2021"
description = "Real-time WORLD-like vocoder (Rust port of ReIm)"

[lib]
name = "reim"
path = "src/lib.rs"

[[bin]]
name = "reim"
path = "src/main.rs"

[dependencies]
rustfft = "6"
realfft = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
